test/orchestration-backend/orchestration-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-orchestration-backend
  labels:
    app: dissco-orchestration-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-orchestration-backend
  template:
    metadata:
      labels:
        app: dissco-orchestration-backend
        language: java
    spec:
      automountServiceAccountToken: true
      serviceAccountName: dissco-orchestration-backend-sa
      containers:
        - name: dissco-orchestration-backend
          image: public.ecr.aws/dissco/dissco-core-orchestration-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          env:
            - name: spring.datasource.url
              value: jdbc:postgresql://terraform-20230822143945532600000001.cbppwfnjypll.eu-west-2.rds.amazonaws.com:5432/dissco
            - name: spring.datasource.username
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: db-username
            - name: spring.datasource.password
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: db-password
            - name: spring.security.oauth2.resourceserver.jwt.issuer-uri
              value: https://keycloak.iam.naturalis.io/realms/dissco-dev
            - name: spring.security.oauth2.authorizationserver.endpoint.jwk-set-uri
              value: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
            - name: jwt.auth.converter.resource-id
              value: springboot-keycloak-client
            - name: spring.rabbitmq.password
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: rabbitmq-password
            - name: spring.rabbitmq.username
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: rabbitmq-username
            - name: spring.rabbitmq.host
              value: rabbitmq-cluster.rabbitmq.svc.cluster.local
            - name: spring.security.oauth2.client.registration.dissco.client-id
              value: dissco-orchestration-backend
            - name: spring.security.oauth2.client.registration.dissco.authorization-grant-type
              value: client_credentials
            - name: spring.security.oauth2.client.provider.dissco.token-uri
              value: https://keycloak.iam.naturalis.io/realms/dissco-dev/protocol/openid-connect/token
            - name: endpoint.handle-endpoint
              value: https://dev.dissco.tech/handle-manager/api/pids/v1/
            - name: application.baseUrl
              value: orchestration-dev.dissco.tech
            - name: spring.security.oauth2.client.registration.dissco.client-secret
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: dissco-orchestration-client-secret
            - name: translator-job.export.dissco-domain
              value: dev.dissco.tech
            - name: translator-job.export.export-image
              value: public.ecr.aws/dissco/source-system-job-scheduler:latest
            - name: translator-job.rabbitmq.routingKeyName
              value: source-system-data-checker
            - name: translator-job.rabbitmq.exchangeName
              value: source-system-data-checker-exchange
            - name: translator-job.export.keycloak
              value: https://keycloak.iam.naturalis.io/
            - name: mas.runningEndpoint
              value: https://dev.dissco.tech/api/v1/mjr
            - name: s3.accessKey
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: orchestration-s3-access-key
            - name: s3.accessSecret
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: orchestration-s3-access-key-secret
            - name: springdoc.swagger-ui.path
              value: /docs/swagger-ui.html
            - name: springdoc.api-docs.path
              value: /docs/api-docs
            - name: springdoc.swagger-ui.config-url
              value: /api/docs/api-docs/swagger-config
            - name: springdoc.swagger-ui.url
              value: /api/docs/api-docs
            - name: springdoc.swagger-ui.operationsSorter
              value: method
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
              ephemeral-storage: "1Gi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 6
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: aws-secrets
              mountPath: "/mnt/secrets-store/aws-secrets"
              readOnly: true
      volumes:
        - name: aws-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets"
